# monoEmbeddedPlayground

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt  Path.h  camera.h  hitable_list.h  main.cc  mono.cpp  mono.h  triangle.cpp  triangle.h
engineMono/: BaseScript.cs  CMakeLists.txt  Component.cs  Entity.cs  Prefab.cs  Texture.cs  Transform.cs
game/: CMakeLists.txt  TestScript.cs
raylib/lib/pkgconfig/: raylib.pc
scripts/: Debug.cs  DeserializingSampleScript.cs  Engine.cs  SampleScript.cs  Time.cs
src/: Application.cpp  Application.h  ImGuiFrame.cpp  ImGuiFrame.h  InitialLayer.cpp  InitialLayer.h  Layer.h  ScriptApi.h  ScriptCompiler.cpp  ScriptCompiler.h  ScriptFramework.cpp  ScriptFramework.h  ScriptHelper.cpp  ScriptHelper.h  ScriptInstance.cpp  ScriptInstance.h  main.cpp
temp/: SampleUserScript.json
userScripts/: SampleUserScript.cs  SampleUserScript2.cs  SampleUserScript2.json
